# final-year-project

./: .gitignore  README.md
app/: .env.example  App.tsx  app.json  index.ts  jest.config.js  package-lock.json  package.json
app/__tests__/: useProofGeneration.test.ts
app/app/: _layout.tsx  camera.tsx  verifier.tsx
app/app/(tabs)/: index.tsx
app/components/: CameraModal.tsx  PassportModal.tsx  ProofModal.tsx  QRScanModal.tsx  WalletButton.tsx
app/contexts/: wallet-context.tsx
app/hooks/: useProofGeneration.ts
app/utils/: ocr.ts  proof.ts
circuits/: TestVerifier.sol  build.sh  input.json  pot12_0001.ptau  proof.json  test.circom  test_0000.zkey  verification_key.json
circuits/test_js/: test.wasm
contracts/: hardhat.config.ts  package-lock.json  package.json
contracts/contracts/: TestVerifier.sol
contracts/scripts/: deploy.js
ocr/: .dockerignore  .env.example  Dockerfile  README.md  app.py  google_ocr.py  requirements.txt  test_app.py
ocr-service/: .coverage  .env.example  Dockerfile  README.md  app.py  google_ocr.py  pytest.ini  requirements.txt  test_app.py  vision_client.py
passport-app/: package-lock.json  package.json
passport-app/app/: _layout.tsx  camera.tsx
passport-app/app/(tabs)/: index.tsx
passport-app/utils/: ocr.ts
passport-protocol/: .env.example  .gitignore  hardhat.config.js  mock_passport.json  package-lock.json  package.json  tsconfig.json  verification_requirements.json  vkey.json
passport-protocol/artifacts/contracts/PassportRegistry.sol/: ISP1Verifier.json  PassportRegistry.json
passport-protocol/cache/: solidity-files-cache.json
passport-protocol/contracts/: MockSP1Verifier.sol  PassportVerifier.sol
passport-protocol/lib/: Cargo.toml
passport-protocol/lib/src/: lib.rs
passport-protocol/program/: Cargo.toml
passport-protocol/program/src/: main.rs
passport-protocol/proofs/: passport_proof_evm.json
passport-protocol/script/: Cargo.toml
passport-protocol/script/src/: utils.rs
passport-protocol/scripts/: debug-public-values.js  decode-input.js  deploy.js  generate_proofs.ts  test-contract.js  verify-proof.js  verify_on_chain.ts
web/: .env.example  components.json  craco.config.js  package-lock.json  package.json  tsconfig.json
web/src/: App.css  App.test.tsx  App.tsx  Attestation.tsx  DeployedContracts.tsx  Layout.tsx  Verify.tsx  WalletContext.tsx  index.css  index.tsx
web/src/components/: AnimatedList.css  AnimatedList.tsx  GlitchText.tsx  PixelBlast.tsx  StaggeredMenu.css  StaggeredMenu.tsx
web/src/data/: countries.ts
zkp/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  hardhat.config.js  package-lock.json  package.json  requirements.txt  test_app.py  verification_requirements.json
zkp/contracts/: AppVerifier.sol  MockSP1Verifier.sol  PassportRegistry.sol  PassportVerifier.sol  SP1VerifierGateway.sol  VerifierFactory.sol
zkp/lib/: Cargo.toml
zkp/lib/src/: lib.rs
zkp/program/src/: main.rs
zkp/script/: Cargo.toml  build.rs  vkey.json  vkey_hash.txt
zkp/scripts/: decode-input.js  deploy.js  sp1-rustc-wrapper.sh  test-local.js
(+3 files in other folders)
