[package]
version = "0.1.0"
name = "passport-verifier-script"
edition = "2021"
default-run = "age-prover"

[[bin]]
name = "age-prover"
path = "src/bin/prove_age.rs"

[[bin]]
name = "nationality-prover"
path = "src/bin/prove_nationality.rs"

[[bin]]
name = "wallet-prover"
path = "src/bin/bind_wallet.rs"

[[bin]]
name = "age-evm"
path = "src/bin/prove_age_onchain.rs"

[[bin]]
name = "nationality-evm"
path = "src/bin/prove_nationality_onchain.rs"

[[bin]]
name = "wallet-evm"
path = "src/bin/bind_wallet_onchain.rs"

[[bin]]
name = "vkey"
path = "src/bin/export_vkey.rs"

[[bin]]
name = "solidity-verifier"
path = "src/bin/solidity_verifier.rs"

[dependencies]
sp1-sdk = "5.2.2"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
passport-verifier-lib = { path = "../lib" }
dotenv = "0.15.0"
chrono = "0.4"

[build-dependencies]
sp1-build = "5.2.2"
