[package]
version = "0.1.0"
name = "passport-verifier-script"
edition = "2021"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "vkey"
path = "src/bin/export_vkey.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "5.2.2"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
passport-verifier-lib = { path = "../lib" }
dotenv = "0.15.0"
chrono = "0.4"
colored = "3.0.0"

[build-dependencies]
sp1-build = "5.2.2"


