[package]
version = "0.1.0"
name = "passport-verifier-script"
edition = "2021"
default-run = "age-prover"

[[bin]]
name = "age-prover"
path = "src/bin/age.rs"

[[bin]]
name = "nationality-prover"
path = "src/bin/nationality.rs"

[[bin]]
name = "wallet-prover"
path = "src/bin/connection.rs"

[dependencies]
sp1-sdk = "5.0.8"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
passport-verifier-lib = { path = "../lib" }
dotenv = "0.15.0"
chrono = "0.4"

[build-dependencies]
sp1-build = "5.0.8"
